<resources>
    <string name="app_name">C4C</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="exposures">Exposures</string>
    <string name="report_view_previous_exposures">Report/view previous exposures</string>
    <string name="immunizations">Immunizations</string>
    <string name="track_immunization_history">Track immunization history</string>
    <string name="broadcasts">Broadcasts</string>
    <string name="schedule_broadcasts">Schedule broadcast messages</string>
    <string name="resources">Resources</string>
    <string name="a_collection_of_useful_medical_resources">Useful medical resources</string>
    <string name="check_in">Check in</string>
    <string name="checkin_location">Check in your location</string>
    <string name="feedback">Feedback</string>
    <string name="give_feedback">Give anonymous feedback</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="phone_number">Phone No.</string>
    <string name="c4c_logo">c4c logo</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_user">New user?</string>
    <string name="sign_up">Sign Up</string>
    <string name="account_information">Account information</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string-array name="cadre">
        <item>Please select your Cadre</item>
        <item>Doctor</item>
        <item>Nurse</item>
        <item>Clinical Officer</item>
        <item>Lab Technologist</item>
        <item>VCT Counselor</item>
        <item>Waste handlers</item>
        <item>Cleaners</item>
        <item>Student</item>
        <item>Other</item>
    </string-array>
    <string-array name="gender">
        <item>Please select your gender</item>
        <item>MALE</item>
        <item>FEMALE</item>

    </string-array>
    <string-array name="type_feedback">
        <item>What type of feedback is it?</item>
        <item>COMPLIMENT</item>
        <item>COMPLAINT</item>
        <item>SUGGESTION</item>

    </string-array>
    <string-array name="category">
        <item>What category is it in?</item>
        <item>General</item>
        <item>Supplies</item>
        <item>Hospital Condition</item>

    </string-array>
    <string-array name="exposure_occurrence">
        <item>Medical Ward</item>
        <item>Surgical Ward</item>
        <item>Theater</item>
        <item>Maternity</item>
        <item>Dental Clinic</item>
        <item>OP/MCH</item>
        <item>Laundry</item>
        <item>Laboratory</item>
        <item>Other</item>
    </string-array>
    <string name="exposure_type">Exposure type</string>
    <string-array name="describe_injury">
        <item>Little or no bleeding</item>
        <item>Deep stick/cut, Profuse bleeding</item>
    </string-array>
    <string-array name="device_used">
        <item>syringe/needle IM/SC injection</item>
        <item>Syringe /needle blood drawing</item>
        <item>Phlebotomy needle/vacuum set</item>
        <item>IV catheter/canula</item>
        <item>Needle on IV-line</item>
        <item>Unused needle</item>
        <item>Lancet</item>
        <item>Suture needle</item>
        <item>Scalpel</item>
        <item>Capillary tube</item>
        <item>Glass slide</item>
        <item>Pipette tip</item>
        <item>Other</item>
    </string-array>
    <string-array name="device_purpose">
        <item>Injections</item>
        <item>IV fluid</item>
        <item>Blood collection</item>
        <item>Cannulation/start IV</item>
        <item>Connect IV-line</item>
        <item>Place arterial/Central line</item>
        <item>Fingerstick/heel stick</item>
        <item>Other</item>
    </string-array>
    <string-array name="exposure_how">
        <item>During procedure</item>
        <item>Disassembling device</item>
        <item>Recapping</item>
        <item>Cleaning after procedure</item>
        <item>Device left on table, floor etc</item>
        <item>Device placed in appropriate trash bin</item>
        <item>Device protruded from trash container</item>
        <item>During disposal</item>
        <item>Other</item>
    </string-array>
    <string-array name="exposure_describe">
        <item>Little or no bleeding</item>
        <item>Deep stick/cut, profuse bleeding</item>
    </string-array>
    <string-array name="exposure_cause">
        <item>Patient contact</item>
        <item>Leaking specimen container</item>
        <item>Faulty apparatus</item>
        <item>Contaminated surfaces</item>
        <item>Other</item>
    </string-array>
    <string-array name="exposure_device">
        <item>What device was used?</item>

    </string-array>
    <string-array name="previous_exposure">
        <item>Yes</item>
        <item>No</item>

    </string-array>
    <string-array name="pep">
        <item>No</item>
        <item>Yes</item>

    </string-array>
    <string-array name="contact_with">
        <item>Patient</item>
        <item>Colleague</item>
        <item>Community</item>
        <item>Home</item>
        <item>Unknown</item>

    </string-array>
    <string-array name="ppe_worn">
        <item>Yes</item>
        <item>No</item>

    </string-array>
    <string-array name="ppes">
        <item>Single gloves</item>
        <item>N95 mask (or equivalent)</item>
        <item>Face shield or goggles/protective glasses</item>
        <item>Disposable gown</item>
        <item>Waterproof apron</item>

    </string-array>
    <string-array name="covid_symptoms">
        <item>Yes</item>
        <item>No</item>

    </string-array>
    <string-array name="syptoms">
        <item>Single gloves</item>
        <item>N95 mask (or equivalent)</item>
        <item>Face shield or goggles/protective glasses</item>
        <item>Disposable gown</item>
        <item>Waterproof apron</item>

    </string-array>
    <string-array name="ipc_training">
        <item>Yes</item>
        <item>No</item>

    </string-array>
    <string-array name="pcr_test">
        <item>Positive</item>
        <item>Negative</item>
        <item>Not done</item>

    </string-array>
    <string-array name="isolation_method">
        <item>Home-Quarantine</item>
        <item>Center-Quarantine; Hospital-Isolation</item>
        <item>Home-based care</item>

    </string-array>
    <string-array name="patient_hiv">
        <item>UNKNOWN</item>
        <item>POSITIVE</item>
        <item>NEGATIVE</item>

    </string-array>
    <string-array name="patient_hbv">
        <item>UNKNOWN</item>
        <item>POSITIVE</item>
        <item>NEGATIVE</item>

    </string-array>
    <string-array name="type_broadcast">
        <item>Please select the type of broadcast</item>
        <item>Informational</item>
    </string-array>
    <string-array name="target_group">
        <item>Please select the target group</item>
        <item>Doctor</item>
        <item>Nurse</item>
        <item>Clinical Officer</item>
        <item>Lab Technologist</item>
        <item>VCT Counselor</item>
        <item>Waste handlers</item>
        <item>Cleaners</item>
        <item>Student</item>
    </string-array>
    <string-array name="disease">
        <item>....</item>
        <item>Varicella</item>
        <item>Influenza</item>
        <item>TDAP</item>
        <item>Measles</item>
        <item>Meningococcal</item>
    </string-array>
    <string name="generic_server_down">Cannot Reach Server Using Device</string>
    <string name="connection">Please check your internet connection.</string>
    <string name="generic_error">Connection Not Established,Resend Request</string>
    <string name="error_400">Connection Not Established Error 400</string>
    <string name="error_401">Unauthorized Access</string>
    <string name="error_402">Payment Required</string>
    <string name="error_403">Forbidden Access</string>
    <string name="error_404">Resource not Found</string>
    <string name="error_405">Method Not Allowed</string>
    <string name="error_406">Connection Not Established Error 406</string>
    <string name="error_407">Proxy Authentication Required</string>
    <string name="error_408">TimeOut Error, Resend Request</string>
    <string name="error_409">Conflict in connection</string>
    <string name="error_410">Connection Not Established Error 410</string>
    <string name="error_411">Connection Not Established Error 411</string>
    <string name="error_412">Connection Not Established Error 412</string>
    <string name="error_413">Connection Not Established Error 413</string>
    <string name="error_414">Connection Not Established Error 414</string>
    <string name="error_415">Unsupported Media Type</string>
    <string name="error_416">Requested Range Not Satisfiable</string>
    <string name="error_417">Expectation Failed</string>
    <string name="error_422">Unprocessable Entity</string>
    <string name="error_500">Server Error</string>
    <string name="error_501">Connection Not Established Error 501</string>
    <string name="error_502">Bad Gateway</string>
    <string name="error_503">Service Unavailable</string>
    <string name="error_504">Gateway Timeout</string>
    <string name="error_505">HTTP Version Not Supported</string>
    <string name="log_out">Log out</string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="e_mail">E-mail</string>
    <string name="profile_information">Profile Information</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="lets_get_you_started_in_one_tap_of_a_button">Let\'s get you started in one tap of a button</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name_required">First name is required</string>
    <string name="surname_required">Surname is required</string>
    <string name="password_required">Password is required</string>
    <string name="phone_number_required">Phone No. is required</string>
    <string name="submit">Submit</string>
    <string name="do_you_have_a_second_dose">Do you have a second dose?</string>
    <string name="title_of_broadcast">Title of broadcast</string>
    <string name="type_in_your_message">Type in your message...</string>
    <string name="immunization_date1">Date of first immunization</string>
    <string name="dose2_yes">Yes</string>
    <string name="dose2_no">No</string>
    <string name="immunization_date2">Date of Second immunization</string>
    <string name="update_profile">Update Profile</string>
    <string name="immunization_text">Select the disease you are immunized against</string>
    <string name="immunization_date3">Date of third immunization</string>
    <string name="do_you_have_a_third_dose">Do you have a third dose?</string>
    <string name="reset_pass">Reset Password</string>
    <string name="new_pass">Enter a New Password</string>
    <string name="reenter_new_pass">Password Confirmation</string>
    <string name="please_enter_the_otp_sent_to_your_phone_and_change_your_password">Please enter the OTP sent to your phone and change your password.</string>
    <string name="one_time_password">One Time Password</string>
    <string name="reset_password">Reset Password</string>
</resources>