<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_exposures"
            android:icon="@drawable/ic_exposure"
            android:title="@string/exposures" />
        <item
            android:id="@+id/nav_immunizations"
            android:icon="@drawable/ic_immunization"
            android:title="@string/immunizations" />
<!--        <item-->
<!--            android:id="@+id/nav_broadcasts"-->
<!--            android:icon="@drawable/ic_message"-->
<!--            android:title="@string/broadcasts" />-->
        <item
            android:id="@+id/nav_resources"
            android:icon="@drawable/ic_resources"
            android:title="@string/resources" />
        <item
            android:id="@+id/nav_check_in"
            android:icon="@drawable/ic_check_in"
            android:title="@string/check_in" />
<!--        <item-->
<!--            android:id="@+id/nav_feedback"-->
<!--            android:icon="@drawable/ic_feedback"-->
<!--            android:title="@string/feedback" />-->
<!--        <item-->
<!--            android:id="@+id/nav_tools"-->
<!--            android:icon="@drawable/ic_menu_manage"-->
<!--            android:title="@string/menu_tools" />-->

    </group>

    <item android:title="Profile">
        <menu>
            <item
                android:id="@+id/nav_update_profile"
                android:icon="@drawable/ic_editprofile"
                android:title="@string/update_profile" />

        </menu>
    </item>

<!--    <item android:title="Communicate">-->
<!--        <menu>-->
<!--            <item-->
<!--                android:id="@+id/nav_share"-->
<!--                android:icon="@drawable/ic_menu_share"-->
<!--                android:title="@string/menu_share" />-->
<!--            <item-->
<!--                android:id="@+id/nav_send"-->
<!--                android:icon="@drawable/ic_menu_send"-->
<!--                android:title="@string/menu_send" />-->
<!--        </menu>-->
<!--    </item>-->

</menu>
