<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="mhealth.login.fragments.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="mhealth.login.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="mhealth.login.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="mhealth.login.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="mhealth.login.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="mhealth.login.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/nav_feedback"
        android:name="mhealth.login.fragments.FeedbackFragment"
        android:label="Feedback" />

    <fragment
        android:id="@+id/nav_check_in"
        android:name="mhealth.login.fragments.CheckinFragment"
        android:label="Check In" />
    <fragment
        android:id="@+id/nav_resources"
        android:name="mhealth.login.fragments.Reasources.ReasourcesFragments"
        android:label="Resources" />
    <fragment
        android:id="@+id/nav_broadcasts"
        android:name="mhealth.login.fragments.Broadcast.BroadcastFragment"
        android:label="Broadcasts" />
    <fragment
        android:id="@+id/nav_immunizations"
        android:name="mhealth.login.fragments.Immunization.ImmunizationFragment"
        android:label="Immunizations" />
    <fragment
        android:id="@+id/nav_exposures"
        android:name="mhealth.login.fragments.Exposures.ExposuresFragment"
        android:label="Exposures" />

    <fragment
        android:id="@+id/nav_add_exposure"
        android:name="mhealth.login.fragments.Exposures.ReportExposuresFragment"
        tools:layout="@layout/fragment_report_exposures"
        android:label="Report Exposure"/>

</navigation>