<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frag_new_immunization"
    android:orientation="vertical"
    tools:context=".fragments.Immunization.NewImmunizationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/spacing_large">

        <TextView
            android:id="@+id/immunization_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/immunization_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <org.angmarch.views.NiceSpinner
            android:id="@+id/disease"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_xxlarge"
            android:drawSelectorOnTop="true"
            android:contentDescription="Select disease"
            android:importantForAccessibility="yes"/>

        <TextView
            android:id="@+id/immunization_date1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/immunization_date1"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:clickable="true"
            android:focusable="true"/>

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_large" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dose2_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/do_you_have_a_second_dose"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"/>

        <RadioGroup
            android:id="@+id/secondDoseRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/secondYes"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/dose2_yes"/>

            <RadioButton
                android:id="@+id/secondNo"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:checked="true"
                android:text="@string/dose2_no" />
        </RadioGroup>

        <TextView
            android:id="@+id/immunization_date2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/immunization_date2"
            android:textStyle="bold"
            android:visibility="gone"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:clickable="true"
            android:focusable="true"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dose3_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/do_you_have_a_third_dose"
            android:layout_marginTop="@dimen/spacing_large"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"/>

        <RadioGroup
            android:id="@+id/thirdDoseRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/thirdYes"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/dose2_yes"/>

            <RadioButton
                android:id="@+id/thirdNo"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:checked="true"
                android:text="@string/dose2_no" />
        </RadioGroup>

        <TextView
            android:id="@+id/immunization_date3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/immunization_date3"
            android:textStyle="bold"
            android:visibility="gone"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:clickable="true"
            android:focusable="true"/>

        <LinearLayout
            android:id="@+id/lyt_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            android:visibility="gone"
            android:layout_gravity="center"
            android:orientation="vertical">

            <mhealth.login.widgets.ViewLoadingDotsBounce
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:background="@color/colorAccent" />

        </LinearLayout>

        <Button
            android:id="@+id/submit_immunization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:background="@drawable/btn_rounded_primary"
            android:textSize="20sp"
            android:layout_marginTop="@dimen/spacing_large"
            android:textColor="@color/amber_50"
            style="@style/Widget.MaterialComponents.Button" />

    </LinearLayout>


</LinearLayout>