<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frag_reset_pass"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    android:fitsSystemWindows="true">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:src="@drawable/img_number_verification"
                android:contentDescription="TODO" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_pass"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@color/grey_80"
                android:textStyle="bold" />

            <TextView
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/please_enter_the_otp_sent_to_your_phone_and_change_your_password"
                android:gravity="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@color/grey_60" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/spacing_large"
                android:layout_marginTop="@dimen/spacing_xlarge">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:maxLines="1"
                    android:maxLength="12"
                    android:singleLine="true"
                    android:hint="@string/phone_number" />

                </com.google.android.material.textfield.TextInputLayout>


                <View
                    android:layout_width="@dimen/spacing_medium"
                    android:layout_height="0dp" />


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/otp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:hint="@string/one_time_password" />
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="@dimen/spacing_medium"
                    android:layout_height="0dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    app:passwordToggleEnabled="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/new_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:hint="@string/new_pass" />

                </com.google.android.material.textfield.TextInputLayout>



                <View
                    android:layout_width="@dimen/spacing_medium"
                    android:layout_height="0dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    app:passwordToggleEnabled="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_repass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:hint="@string/reenter_new_pass" />

                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="@dimen/spacing_medium"
                    android:layout_height="0dp" />

            </LinearLayout>



            <LinearLayout
                android:id="@+id/lyt_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/spacing_medium"
                android:orientation="vertical"
                android:visibility="gone">

                <mhealth.login.widgets.ViewLoadingDotsBounce
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:background="@color/colorAccent" />

            </LinearLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset_password"
                android:textColor="@color/grey_50"
                android:textAlignment="center"
                android:textSize="20sp"
                android:onClick="gotoSignIn"
                style="@style/Widget.MaterialComponents.Button"/>


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</RelativeLayout>