<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/id_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/EditText.Flat.Grey"
                    android:inputType="text"
                    android:hint="@string/title_of_broadcast"/>
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="5dp" />

            <Spinner
                android:id="@+id/type_broadcast"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xxlarge"
                android:drawSelectorOnTop="true"
                android:entries="@array/type_broadcast"/>

            <View
                android:layout_width="0dp"
                android:layout_height="5dp" />


            <Spinner
                android:id="@+id/target_group"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xxlarge"
                android:drawSelectorOnTop="true"
                android:entries="@array/category"/>

            <View
                android:layout_width="0dp"
                android:layout_height="5dp" />




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_post"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:gravity="top"
                android:lines="4"
                android:hint="@string/type_in_your_message"
                android:padding="@dimen/spacing_large"
                android:textSize="14sp" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_middle"
                android:layout_marginBottom="@dimen/spacing_middle"
                android:background="@drawable/btn_rounded_primary"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold"
                style="@style/Widget.MaterialComponents.Button"/>



        </LinearLayout>

    </LinearLayout>




</androidx.core.widget.NestedScrollView>